--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java-library'
     id 'eclipse'
     id 'com.github.ben-manes.versions' version '0.48.0'
-    id 'net.neoforged.gradleutils' version '2.+'
+    id 'net.neoforged.gradleutils' version '3.0.0-alpha.4'
     id 'org.gradlex.extra-java-module-info' version '1.4.2'
     id 'maven-publish'
 }
@@ -25,8 +25,8 @@ dependencyUpdates {
 }
 
 group = 'cpw.mods'
-version = gradleutils.getTagOffsetVersion()
-logger.lifecycle('Version: ' + version)
+version = gradleutils.version
+logger.lifecycle('Version: {}', version)
 
 sourceSets {
     jmh
@@ -81,7 +81,7 @@ extraJavaModuleInfo {
     automaticModule("jopt-simple-${jopt_version}.jar", 'jopt.simple')
 }
 
-task testsJar(type: Jar) {
+tasks.register('testsJar', Jar) {
     archiveClassifier = 'testsjar'
     from sourceSets.testJars.output
 }
@@ -104,7 +104,7 @@ test {
     )
 }
 
-task jmh(type: JavaExec) {
+tasks.register('jmh', JavaExec) {
     dependsOn('jmhClasses')
     mainClass = 'org.openjdk.jmh.Main'
 
@@ -150,26 +150,22 @@ task jmh(type: JavaExec) {
 
 ext.sharedManifest = manifest {
     attributes(['Specification-Title': 'modlauncher',
-                'Specification-Vendor': 'neoforged',
+                'Specification-Vendor': 'mcmodlauncher',
                 'Specification-Version': '9.0', // We are version 9 of the modlauncher specification
                 'Implementation-Title': project.name,
-                'Implementation-Version': "${project.version}+${System.getenv('BUILD_NUMBER')?:0}+${gradleutils.gitInfo.branch}.${gradleutils.gitInfo.abbreviatedId}",
-                'Implementation-Vendor' :'neoforged',
-                'Implementation-Timestamp': java.time.Instant.now().toString(),
+                'Implementation-Version': "${project.version}+${gradleutils.gitInfo.branch}.${gradleutils.gitInfo.abbreviatedId}",
+                'Implementation-Vendor' :'mcmodlauncher',
                 'Git-Commit': gradleutils.gitInfo.abbreviatedId,
-                'Git-Branch': gradleutils.gitInfo.branch?:'NONE',
-                'Build-Number': "${System.getenv('BUILD_NUMBER')?:0}" ],
+                'Git-Branch': gradleutils.gitInfo.branch?:'NONE'],
             'cpw/mods/modlauncher/api/')
     attributes(['Specification-Title': 'modlauncherserviceapi',
-                'Specification-Vendor': 'neoforged',
+                'Specification-Vendor': 'mcmodlauncher',
                 'Specification-Version': '9.0', // We are version 9 of the modlauncher cpw.mods.modlauncher.serviceapi specification
                 "Implementation-Title": project.name,
-                'Implementation-Version': "${project.version}+${System.getenv('BUILD_NUMBER')?:0}+${gradleutils.gitInfo.branch}.${gradleutils.gitInfo.abbreviatedId}",
-                'Implementation-Vendor' :'neoforged',
-                'Implementation-Timestamp': java.time.Instant.now().toString(),
+                'Implementation-Version': "${project.version}+${gradleutils.gitInfo.branch}.${gradleutils.gitInfo.abbreviatedId}",
+                'Implementation-Vendor' :'mcmodlauncher',
                 'Git-Commit': gradleutils.gitInfo.abbreviatedId,
-                'Git-Branch': gradleutils.gitInfo.branch?:'NONE',
-                'Build-Number': "${System.getenv('BUILD_NUMBER')?:0}"],
+                'Git-Branch': gradleutils.gitInfo.branch?:'NONE'],
             'cpw/mods/modlauncher/serviceapi/')
 }
 
@@ -193,17 +189,8 @@ publishing {
             from components.java
             pom {
                 name = 'Mod Launcher'
-                description = 'Common ModLauncher framework'
-                url = 'https://github.com/McModLauncher/modlauncher'
-                scm {
-                    url = 'https://github.com/McModLauncher/modlauncher'
-                    connection = 'scm:git:git://github.com/McModLauncher/modlauncher.git'
-                    developerConnection = 'scm:git:git@github.com:McModLauncher/modlauncher.git'
-                }
-                issueManagement {
-                    system = 'github'
-                    url = 'https://github.com/McModLauncher/modlauncher/issues'
-                }
+                description = 'Java 17 mod launcher'
+                pomUtils.githubRepo(it, 'modlauncher', 'McModLauncher')
 
                 developers {
                     developer {
@@ -215,6 +202,6 @@ publishing {
         }
     }
     repositories {
-        maven gradleutils.getPublishingForgeMaven()
+        maven gradleutils.publishingMaven
     }
 }
